add common attributes

--- a/src/main/resources/assets/l2library/lang/zh_cn.json
+++ b/src/main/resources/assets/l2library/lang/zh_cn.json
@@ -7,6 +7,9 @@
     "menu.tabs.attribute.mult_base": "乘法乘区: %s",
     "menu.tabs.attribute.mult_all": "独立乘法乘区: %s",
     "menu.tabs.attribute.format": "(%s%s)x(1%s)x%s=%s",
+    "attribute.name.crit_rate": "暴击率",
+    "attribute.name.crit_damage": "暴击伤害",
+    "attribute.name.bow_strength": "弓箭伤害",
     "generic.attack_range": "攻击距离",
     "generic.reachDistance": "触及距离",
     "forge.swimSpeed": "游泳速度"
