--- a/src/main/resources/assets/l2library/lang/zh_cn.json
+++ b/src/main/resources/assets/l2library/lang/zh_cn.json
@@ -15,5 +15,6 @@
     "generic.reachDistance": "触及距离",
     "forge.swimSpeed": "游泳速度",
     "l2library.tooltip.tool.immune": "免疫: ",
-    "key.categories.l2library": "莱特兰通用按键"
+    "key.categories.l2library": "莱特兰通用按键",
+    "l2library.tooltip.quick_access": "在GUI中右键打开"
 }
