move out item selector

--- a/src/main/resources/assets/l2library/lang/zh_cn.json
+++ b/src/main/resources/assets/l2library/lang/zh_cn.json
@@ -1,6 +1,5 @@
 {
     "generic.attack_range": "攻击距离",
     "generic.reachDistance": "触及距离",
-    "forge.swimSpeed": "游泳速度",
-    "key.categories.l2library": "莱特兰通用按键"
+    "forge.swimSpeed": "游泳速度"
 }
